<resources>
    <string name="app_name">MuseumQuests</string>
    <string name="questname">Quest #1</string>
    <string name="question">Question</string>

    <string name="welcome_to_museumquests">Welcome to MuseumQuests</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_name_and_password">Enter your name and password</string>

    <string name="confirm_your_password">Confirm your password</string>
    <string name="home">HOME</string>
    <string name="sign_out">Sign out</string>
    <string name="score">SCORE :</string>
    <string name="place">PLACE :</string>
    <string name="click_to_change_language">click to change language</string>
    <string name="done_quests">DONE QUESTS:</string>
    <string name="start_new_quest">Start new quest</string>
    <string name="info">INFO:</string>
    <string name="start">Start</string>
    <string name="tap_on_quest">Tap on quest</string>
    <string name="skip">Skip</string>
    <string name="check">Check</string>
    <string name="your_result">YOUR RESULT:</string>
    <string name="place_1">PLACE : 1</string>
    <string name="go_home">GO HOME</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="password">Password</string>
    <string name="make_up_title_and_description">Make up title and description</string>
    <string name="enter_quest_title">Enter quest title</string>
    <string name="enter_description">Enter description</string>
    <string name="check_your_inputs">Check your inputs!!!</string>
    <string name="your_question">Your Question</string>
    <string name="enter_question">Enter question</string>
    <string name="input_answers_and_choose_correct_answer">Input answers and choose correct answer</string>
    <string name="enter_first_answer">Enter first answer</string>
    <string name="enter_second_answer">Enter second answer</string>
    <string name="enter_third_answer">Enter third answer</string>
    <string name="enter_fourth_answer">Enter fourth answer</string>
    <string name="create_new_question">Create new question</string>
    <string name="cancel_quest">Cancel quest</string>
    <string name="done">DONE</string>
    <string name="quest_name">Quest name</string>
    <string name="skipthequestion">Skip the question</string>
    <string name="ywgap">You won\'t get any points!</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="pasdontmatch">Passwords don\'t match</string>
    <string name="atlest">Username must have at least 4 characters!</string>
    <string name="passatleast">Password must have at least 4 characters!</string>
    <string name="alrexi">This username already exists!</string>
    <string name="create_quest">Create quest</string>
    <string name="newuseradded">New user added!</string>
    <string name="signin">Sign in</string>
    <string name="username">Username</string>
    <string name="wronguor">Wrong username or password!</string>
    <string name="score11">Score</string>
    <string name="usernam">username:</string>
    <string name="so">Sign out</string>
    <string name="arusur">Are you sure you want to sign out?</string>
    <string name="donthavepermis">You have don\'t have permissions for this!\nIf you want to create quests contact us by
        email
    </string>
    <string name="gotand">You have already passed this quest!\nYou will not gain any points</string>
    <string name="add_image">Add Image</string>
    <string name="to_add_image_give_image_url">Add image url</string>

</resources>
