<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Sign_up">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:padding="8dp"
                  android:descendantFocusability="beforeDescendants"
                  android:focusableInTouchMode="true">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/imageViewa"
                android:src="@drawable/mueseum"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/your_question"
                  android:gravity="center"
                  android:textSize="16sp"
        />
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:focusable="true"
                  android:hint="@string/enter_question"
                  android:gravity="center_horizontal"
                  android:id="@+id/newquestion"
                  android:layout_marginVertical="24dp"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/input_answers_and_choose_correct_answer"
                  android:gravity="center"
                  android:textSize="16sp"
        />
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <LinearLayout android:orientation="vertical"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content">
                <RadioGroup android:layout_width="match_parent" android:layout_height="match_parent"
                            android:id="@+id/radio_group">
                    <RadioButton android:layout_width="wrap_content"
                                 android:id="@+id/correctanswer1"
                                 android:layout_margin="10dp"
                                 android:layout_height="wrap_content"/>
                    <RadioButton android:layout_width="wrap_content"
                                 android:id="@+id/correctanswer2"
                                 android:layout_margin="10dp"
                                 android:layout_height="wrap_content"/>
                    <RadioButton android:layout_width="wrap_content"
                                 android:id="@+id/correctanswer3"
                                 android:layout_margin="10dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="20dp"/>
                    <RadioButton android:layout_width="wrap_content"
                                 android:id="@+id/correctanswer4"
                                 android:layout_margin="10dp"
                                 android:layout_height="wrap_content"/>

                </RadioGroup>
            </LinearLayout>
            <LinearLayout android:orientation="vertical"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content">
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:focusable="true"
                          android:hint="@string/enter_first_answer"
                          android:gravity="center_horizontal"
                          android:layout_margin="10dp"
                          android:id="@+id/questionanswer1"/>
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:focusable="true"
                          android:hint="@string/enter_second_answer"
                          android:gravity="center_horizontal"
                          android:layout_marginVertical="4dp"
                          android:id="@+id/questionanswer2"/>
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:focusable="true"
                          android:hint="@string/enter_third_answer"
                          android:gravity="center_horizontal"
                          android:layout_marginVertical="4dp"
                          android:id="@+id/questionanswer3"/>
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:focusable="true"
                          android:hint="@string/enter_fourth_answer"
                          android:gravity="center_horizontal"
                          android:layout_marginVertical="4dp"
                          android:id="@+id/questionanswer4"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/check_your_inputs"
                  android:gravity="center"
                  android:textSize="16sp"
        />
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_start"
                android:layout_marginVertical="16dp"
                android:text="@string/create_new_question"
                android:textColor="#FFFFFF"
                android:id="@+id/button_makequestion2"
                android:textSize="16sp"
                android:gravity="center"
        />
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_start"
                android:layout_marginVertical="16dp"
                android:text="@string/done"
                android:textColor="#FFFFFF"
                android:id="@+id/button_done"
                android:textSize="16sp"
                android:gravity="center"
        />
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/change_language_button"
                android:layout_marginVertical="8dp"
                android:text="@string/cancel_quest"
                android:textColor="#000000"
                android:id="@+id/button_blin"
                android:textSize="16sp"
                android:gravity="center"
        />


    </LinearLayout>
</ScrollView>