<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Sign_up">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:padding="8dp"
                  android:layout_gravity="center"
                  android:descendantFocusability="beforeDescendants"
                  android:focusableInTouchMode="true">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="16dp"
                android:id="@+id/imageViewa"
                android:src="@drawable/mueseum"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/make_up_title_and_description"
                  android:gravity="center"
                  android:textSize="16sp"
        />

        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:focusable="true"
                  android:hint="@string/enter_quest_title"
                  android:gravity="center_horizontal"
                  android:id="@+id/newquesttitle"
                  android:layout_marginVertical="24dp"
        />
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:focusable="true"
                  android:hint="@string/enter_description"
                  android:gravity="center_horizontal"
                  android:layout_marginVertical="4dp"

                  android:id="@+id/newquestdeskription"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/check_your_inputs"
                  android:gravity="center"
                  android:textSize="16sp"
        />
                <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:background="@drawable/button_start"
                android:layout_marginVertical="16dp"
                android:text="@string/create_new_question"
                android:textColor="#FFFFFF"
                android:id="@+id/button_makequestion"
                android:textSize="16sp"
        />
    </LinearLayout>
</ScrollView>